# hybridos

./: .gitignore  Makefile  linker.ld  readme.md
src/: boot.asm  boot.s  defs.hpp  graphics.hpp  idt.hpp  interrupts.asm  interrupts.hpp  interrupts.s  io.hpp  kernel.cpp  kernel_backup.cpp  keyboard.hpp  stddefex.hpp  stdio.h  string.hpp  terminal.hpp
tools/: build_image.sh  buildimage.sh  clean-bin.sh  clean_all.sh  clean_install.sh  configure  configure.ac  create_tree.sh  get_binutils.sh  get_gcc.sh  install_binutils.sh  install_gcc.sh  install_grub.sh  install_tools.sh  tmp.html
tools/boot/bootimage/boot/grub/: grub.cfg
